# exordium

./: .gdignore  .gitignore  icon.svg.import  project.godot
addons/settings/: CONF.cfg  plugin.cfg  settings.gd  settings.gd.uid  settings_manager.gd  settings_manager.gd.uid  settings_panel.tscn
database/: Dockerfile  init.sql  start.sh
extensions/: .sconsign.dblite  Sconstruct.py
extensions/src/: exo_chacha.cpp  exo_chacha.os  exo_chaha.hpp  joda.os  register_types.cpp  register_types.hpp  register_types.os
globals/: lobby_menu.tscn
globals/gl_data/: GLOBAL.gd  GLOBAL.gd.uid  NET.gd  NET.gd.uid
globals/gl_scenes/: lobby_menu.gd  lobby_menu.gd.uid  lobby_menu.tscn
scenes/buildings_interior/: init_house.tscn
scenes/world/: world.tscn
server/: Dockerfile  docker-compose.yml
server/exordium/: CMakeLists.txt  install
server/exordium/includes/: command_queue.hpp  exordium.hpp  store.hpp
server/exordium/src/: commandQueue.cpp  main.cpp  store.cpp
tools/: settings.gd  settings.gd.uid
website/: Dockerfile  go.mod  go.sum  wserver.go
website/html/: docs.html  index.html  register.html  success.html
website/static/: 0768eur.ttf.import  EBGaramond-Regular.ttf.import  Mundare - Beta Bold.otf.import  Mundare - Beta Italic.otf.import  Mundare- Regular-Beta.otf.import  bord2_optim.svg.import  border.svg.import  btn_background.svg.import  styles.css
